# odtp-shacl-maker

./: .gitignore  Dockerfile  README.md  pyproject.toml
gui/: app.py
schacl-maker/: main.py  odtp.yml  shacl-maker.py
shacl_maker/: __init__.py  __main__.py
test/: odtp.yml
